test/Fail/UnknownImplicitInstance.err
UnknownImplicitInstance.agda:12.6-7: error: [InvalidInstanceHeadType]
Instance search can only be used to find elements in a named type
when checking that the expression f has type Set
